--- a/roles/templates/roles/search.html
+++ b/roles/templates/roles/search.html
@@ -2,7 +2,7 @@
 {% block content %}
 <body>
 <h2>Filtrar Rolês</h2>
-<form action="{% url 'rolês:search' %}">
+<form action="{% url 'roles:search' %}">
     <p>
        
         <div class="icon"></div>
