--- a/roles/templates/roles/details.html
+++ b/roles/templates/roles/details.html
@@ -10,7 +10,7 @@
 
               <a href="{% url 'roles:tickets' role.id%}" class="btn btn-warning">Comprar</a>
               
-              {% if user.is_authenticated %}
+              {% if user.is_staff %}
                   <h2><br> Organização</h2>
                   <a href="{% url 'roles:update' role.id %}"class="button1"><span></span>Editar</a>
                   <br><a href="{% url 'roles:delete' role.id %}"class="button1"><span></span>Apagar</a>
