--- a/roles/templates/roles/mytickets.html
+++ b/roles/templates/roles/mytickets.html
@@ -14,9 +14,9 @@
                 <div class="single-box">
                   <div class="recipe-title">{{ ticket.type }} - R$ {{ticket.price}}</div>
                   <br><br>
-                      <a href="{% url 'roles:sell_ticket' %}"class="button1"><span></span>Anunciar</a>
+                      <a href="" class="button1"><span></span>Anunciar</a>
                       <br>
-                      <a href="{% url 'roles:open_ticket' %}"class="button1"><span></span>Abrir</a>
+                      <a href="" class="button1"><span></span>Abrir</a>
                 </div>
               </a>
             </li>                                             
