--- a/static/css/details.css
+++ b/static/css/details.css
@@ -1,21 +1,19 @@
-.fundo{
-    background: linear-gradient(to bottom, #999999, #000000);
-    position: relative;
-}
-.paginaReceita {
+.detalhe {
     background-color: #ffffff;
-    padding: 70px;
-    margin: 0 70px;
+    padding: 80px;
+    margin: 0 170px;
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color:rgba(0, 0, 0, 0.75) !important;
 }
-.paginaReceita h1{
+
+.detalhe h1{
     font-size: 40px;
     text-align: center;
 }
 
-.paginaReceita h2 {
+.detalhe h2 {
     font-size: 30px;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
@@ -25,43 +23,31 @@
 }
 
 
-.paginaReceita article {
+.detalhe article {
     font-size: 16px;
     line-height: 1.5;
     font-size: larger;
     color: #666;
 }
-
-.listaDeIng{
-    color: rgb(255, 255, 255);
-    text-align: center;
-    background-color: #515050;
-    padding: 30px;
-    margin: 50px;
-    font-size: larger;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.desc{
+    font-size: 5px;
+    justify-content: flex-end;
 }
 
 article p{
+
     font-size: large;
 }
 
-.paginaReceita .recipe-image {
+.role-image {
     display: block; 
     margin: 0 auto; 
     text-align: center; 
     border-radius: 30px;
-    width: 500px;
+    width: 700px;
 }
 
 
-
-.catdet h3{
-    text-align: center;
-    font-size: 20px;
-}
 
 @media screen and (max-width: 800px) {
     .paginaReceita  {
@@ -73,15 +59,29 @@ article p{
     .listaDeIng{
         margin: 30px;
     }
-    .paginaReceita .recipe-image{
+    .role-image{
       width: 70%;
     }
-
-    .listaDeIng h2{
-        font-size: small;
-    }
-    
-    .listaDeIng ul{
-        font-size: small;
-    }
   }
+
+
+@media screen and (max-width: 700px) {
+    .detalhe{
+        padding: 10px;
+        margin: 0 30px;
+    }
+    .role-image{
+        width: 40%;
+      }
+    .detalhe h1{
+        font-size: 30px;
+        margin-bottom: 15px;
+    }
+    article p{
+        font-size: 15px;
+    }
+    article li{
+        font-size: 15px;
+        padding-left: 10px;
+    }
+}
