--- a/roles/templates/roles/mytickets.html
+++ b/roles/templates/roles/mytickets.html
@@ -5,7 +5,7 @@
     {% if ticket_list %}
       <section class="list-container">
         <br><br>
-        <h2>Ingressos</h2>
+        <h2>Seus Ingressos</h2>
         <br><br>
         
         <ul class="single-list">
@@ -14,9 +14,13 @@
                 <div class="single-box">
                   <div class="recipe-title">{{ ticket.type }} - R$ {{ticket.price}}</div>
                   <br><br>
-                      <a href="" class="button1"><span></span>Anunciar</a>
-                      <br>
-                      <a href="" class="button1"><span></span>Abrir</a>
+                      {% if ticket.on_sale %}
+                        <a href="{% url 'roles:cancelsell_ticket' id=ticket.id %}" class="button1"><span></span>Cancelar anúncio</a>
+                      {% else %}
+                        <a href="{% url 'roles:sell_ticket' id=ticket.id %}" class="button1"><span></span>Anunciar</a>
+                        <br>
+                        <a href="" class="button1"><span></span>Abrir</a>
+                      {% endif %}
                 </div>
               </a>
             </li>                                             
