--- a/roles/templates/roles/tickets.html
+++ b/roles/templates/roles/tickets.html
@@ -16,11 +16,16 @@
                   <div class="recipe-title">{{ ticket.type }} - R$ {{ticket.price}}</div>
                   <br><br>
                   {% if user.is_staff %}
-                      <a href="{% url 'roles:update_ticket' pk=pk_role type=ticket.type %}"class="button1"><span></span>Editar</a>
-                      <br><a href="{% url 'roles:delete_ticket' pk=pk_role type=ticket.type %}"class="button1"><span></span>Apagar</a>
-                  {% else %}
-                      <a href="{% url 'roles:buy_ticket' pk=pk_role type=ticket.type %}" class="button2">Comprar</a>
+                      <a href="{% url 'roles:update_ticket' pk=pk_role id=ticket.id %}"class="button1"><span></span>Editar</a>
+                      <br><a href="{% url 'roles:delete_ticket' pk=pk_role id=ticket.id %}"class="button1"><span></span>Apagar</a>
                   {% endif %}
+              
+                  {% if ticket.id in staff_list %}
+                      <a href="{% url 'roles:buyStaff_ticket' pk=pk_role id=ticket.id %}" class="button2">Comprar</a>
+                  {% else %}
+                      <a href="{% url 'roles:buyUser_ticket' pk=pk_role id=ticket.id %}" class="button2">Comprar</a>
+                  {% endif %}
+                  
                 </div>
               </a>
             </li>                                             
