--- a/static/css/details.css
+++ b/static/css/details.css
@@ -18,6 +18,7 @@
     background-color: #ffffff;
     padding: 80px;
     margin: 0 170px;
+    justify-content: center;
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -61,11 +62,12 @@ article li{
     font-size: 25px;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1250px) {
     .detalhe{
-        padding: 20px;
-        margin: 0 70px;
-        width: 60%;
+        padding: 40px;
+        margin: 0 100px;
+        justify-content: center;
+        max-width: 500px;
     }
     .detalhe h1{
         font-size: 30px;
@@ -83,12 +85,16 @@ article li{
       }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     .detalhe{
-        padding: 20px;
-        margin: 0 70px;
-        width: 50%;
+        padding: 80px;
+        margin: 0 70px auto;
+        justify-content: center;
+        max-width: 320px !important;
     }
+    .role-image{
+        width: 80%;
+      }
     .detalhe h1{
         font-size: 30px;
         margin-bottom: 15px;
