--- a/roles/templates/roles/index.html
+++ b/roles/templates/roles/index.html
@@ -21,7 +21,7 @@
           {% endfor %}
         </ul>
         {% if user.is_staff%}
-            <a href="{% url 'roles:create' %}" class="button2">Adicionar Rolê</a>
+            <br><a href="{% url 'roles:create' %}" class="button2">Adicionar Rolê</a>
         {% endif %}
       </section>
     </div>
