--- a/roles/templates/roles/create_ticket.html
+++ b/roles/templates/roles/create_ticket.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Adicionar Novo Ingresso</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Criar</button>
-</form>
+<div class="banner3">
+    <section class="cadastro">
+        <article>
+            <h1>Adicionar Novo Ingresso</h1>
+            <form method="post" class="custom-form">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="button1">Criar</button>
+            </form>
+        </article>
+    </section>    
+</div>
 
 {% endblock content %}
