--- a/static/css/cadastro.css
+++ b/static/css/cadastro.css
@@ -16,6 +16,7 @@
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     color:rgba(0, 0, 0, 0.75) !important;
+    min-height: 550px;
 }
 .cadastro h1{
     font-size: 60px;
