--- a/staticpages/templates/base.html
+++ b/staticpages/templates/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/list.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/cadastro.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/search.css' %}">
 
     <!-- Remember to include jQuery :) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
