Adicionar modificações para implantação no Render

--- a/roles/templates/roles/search.html
+++ b/roles/templates/roles/search.html
@@ -22,7 +22,7 @@
     </li>
   </section>
     <br><br>
-    {% if post_list %}
+    {% if role_list %}
       <section class="list-container">
         <br><br>
         <h2>Resultados</h2>
