--- a/roles/templates/roles/mytickets.html
+++ b/roles/templates/roles/mytickets.html
@@ -13,19 +13,19 @@
             {% for ticket in ticket_list %}
             <li class="single-item">
                 <div class="single-box">
-                  <div class="recipe-title">{{ ticket.type }} - R$ {{ticket.price}}</div>
+                  <div class="recipe-title">{{ ticket.type }}<br>R$ {{ticket.price}}</div>
                   <br><br>
                       {% if ticket.on_sale %}
-                        <a href="{% url 'roles:cancelsell_ticket' id=ticket.id %}" class="button"><span></span>Cancelar anúncio</a>
+                        <a href="{% url 'roles:cancelsell_ticket' id=ticket.id %}" class="button2"><span></span>Cancelar anúncio</a>
                       {% else %}
-                        <a href="{% url 'roles:sell_ticket' id=ticket.id %}" class="button"><span></span> Anunciar </a>
+                        <a href="{% url 'roles:sell_ticket' id=ticket.id %}" class="button2"><span></span> Anunciar </a>
                         <br>
                         <div id="ex1" class="modal">
                           {% qr_from_text ticket size=30 %}
                         </div>
                         
                         <!-- Link to open the modal -->
-                        <p><a href="#ex1" rel="modal:open" class="button1">Abrir</a></p>
+                        <p><a href="#ex1" rel="modal:open" class="button2">Abrir</a></p>
 
                       {% endif %}
                 </div>
