--- a/roles/templates/roles/cancelsell_ticket.html
+++ b/roles/templates/roles/cancelsell_ticket.html
@@ -1,11 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="banner2">
+    <br><br>
+    <section class="search-container">
+    <li class="caixa-filtro">
+      <div class="single-box">
 <h2>Cancelar anúncio</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Recuperar ingresso</button>
+    <button type="submit" class="button1">Recuperar ingresso</button>
 </form>
-
+</div>
+</li>
+</section>
+</div>
 {% endblock content %}
