--- a/roles/templates/roles/tickets.html
+++ b/roles/templates/roles/tickets.html
@@ -13,11 +13,11 @@
             {% for ticket in ticket_list %}
             <li class="single-item">
                 <div class="single-box">
-                  <div class="recipe-title">{{ ticket.type }} - R$ {{ticket.price}}</div>
+                  <div class="recipe-title">{{ ticket.type }} <br> R$ {{ticket.price}}</div>
                   <br><br>
                   {% if user.is_staff %}
-                      <a href="{% url 'roles:update_ticket' pk=pk_role id=ticket.id %}"class="button1"><span></span>Editar</a>
-                      <br><a href="{% url 'roles:delete_ticket' pk=pk_role id=ticket.id %}"class="button1"><span></span>Apagar</a>
+                      <a href="{% url 'roles:update_ticket' pk=pk_role id=ticket.id %}"class="button2"><span></span>Editar</a>
+                      <a href="{% url 'roles:delete_ticket' pk=pk_role id=ticket.id %}"class="button2"><span></span>Apagar</a>
                   {% endif %}
                   
                   {% if ticket.id in own_list %}
@@ -37,8 +37,8 @@
         </ul>
       </section>
       {% if user.is_staff %}
-          <h2><br> Organização</h2>
-          <a href="tickets/create" class="button2">Adicionar Ingresso</a>
+          <h2 style="display: inline-block;justify-content: center;"><br> Organização</h2>
+          <a href="tickets/create" class="button2">Adicionar Ingresso</a><br><br>
       {% endif %}
     </div>
   </body>
